--- a/api-consumer-app/src/style.css
+++ b/api-consumer-app/src/style.css
@@ -1,80 +1,82 @@
-@import "tailwindcss";
+/*  Reset  */
+
+* { /* el selector de tot */
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+/* --------Global styles-------- */
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  font-family: system-ui, sans-serif;
+  background-color: #7BABED;
+  color: #091F3F;
 }
 
 body {
-  margin: 0;
+  overflow-x: hidden;
+}
+
+/* Container */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+/* Main elements */
+.controls {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 1rem;
+  align-items: center;
+  margin-bottom: 2rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.results {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 .card {
-  padding: 2em;
+  background: white;
+  padding: 1.5rem;
 }
 
-.read-the-docs {
-  color: #888;
+.pg-nav {
+  display: flex;
+  gap: 0.5rem;
+  margin-top: 2rem;
+  justify-content: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.pg-nav button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
-button:hover {
-  border-color: #646cff;
+
+/* States */
+.hidden {
+  display: none;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+#loading {
+  margin-bottom: 1rem;
+}
+
+#error {
+  color: #AB1915;
+  margin-bottom: 1rem;
+}
+
+/* Cards */
+.card {
+  border-radius: 2px;
+  border-color: #8269B8;
+  box-shadow: 0px 5px 15px #6564644d;
 }
 
 @media (prefers-color-scheme: light) {
